--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../RowBot.x86_64"
+export_path="../../../Rowbot123/RowBot.x86_64"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
